Undo delete from submodule edit in ErikVDW.github.io

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div class="clear-button">
       <button>Clear</button>
     </div>
+    <h1>Using Automatically Overflowing Divs</h1>
     <section>
       <div class="block"></div>
       <div class="block"></div>
@@ -68,8 +69,22 @@
       <div class="block"></div>
       <div class="block"></div>
       <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
     </section>
+    <br>
     <hr>
+    <h1>Using Table</h1>
     <table>
       <tr>
         <td class="block"></td>
@@ -124,7 +139,7 @@
         <td class="block"></td>
       </tr>
     </table>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../Extras/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="styles.js"></script>
   </body>
 </html>
