Update section organization

--- a/index.html
+++ b/index.html
@@ -82,63 +82,63 @@
       <div class="block"></div>
       <div class="block"></div>
     </section>
-    <br>
-    <hr>
-    <h1>Using Table</h1>
-    <table>
-      <tr>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-      </tr>
-      <tr>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-      </tr>
-      <tr>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-      </tr>
-      <tr>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-        <td class="block"></td>
-      </tr>
-    </table>
+    <section>
+      <h1>Using Table</h1>
+      <table>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+      </table>
+    </section>
     <script src="../Extras/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="styles.js"></script>
   </body>
