Fix div-style initial appearance

--- a/index.html
+++ b/index.html
@@ -74,17 +74,9 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
       </div>
     </section>
-    <section id = "table-section">
+    <section id = "table">
       <h1>Using Table</h1>
       <table>
         <tr>
