Remove spacing from table

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
     <section id = "table">
       <h1>Using Table</h1>
-      <table>
+      <table cellspacing="0" cellpadding="0">
         <tr>
           <td class="block"></td>
           <td class="block"></td>
