Fix table initial appearance so all blocks appear as squares

--- a/index.html
+++ b/index.html
@@ -131,6 +131,84 @@
           <td class="block"></td>
           <td class="block"></td>
         </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
+        <tr>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+          <td class="block"></td>
+        </tr>
       </table>
     </section>
     <script src="../Extras/jquery-2.1.4.min.js"></script>
