--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </tr>
       </table>
     </section>
-    <script src="../Extras/jquery-2.1.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="styles.js"></script>
   </body>
 </html>
