Blocks made to only change when mouse is held down

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </div>
     <section id = "block-section">
       <h1>Using Automatically Overflowing Divs</h1>
-      <div class = "block-container">
+      <div class = "block-container" draggable="false">
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
